[package]
name = "mi-led-bulb-discord-bot"
version = "0.1.0"
authors = ["JM REMEUR <jm@remeur.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.4"
tokio = { version = "0.2", features = ["macros"] }
lazy_static = "1.4.0"
yeelight = "0.3.0"
log = "0.4.0"
env_logger = "0.8.3"
futures = "0.3.15"